samba (2:3.3.0~rc2-5) experimental; urgency=low

  * Use alternatives for nsstest, locktest, masktest, smbtatus, nmblookup,
  net and smbtorture to allow installation of Samba 3 together with Samba 4. 
  * Add myself to uploaders.

 -- Jelmer Vernooij <jelmer@debian.org>  Sun, 25 Jan 2009 20:32:34 +0100

samba (2:3.3.0~rc2-4) experimental; urgency=low

  [ Steve Langasek ]
  * Revert one of the template depersonalization changes from the -2 upload,
    because it loses important context

  [ Christian Perrier ]
  * Use double quotation marks in debconf templates
  * Add 'status" option to init scripts. Thansk to Dustin Kirkland for
    providing the patch. Closes: #488275
  * Move WHATSNEW.txt, README, Roadmap to samba-common. Closes: #491997
  * [Lintian] Add ${misc:Depends} to dependencies of binary packages
    that didn't have it already as we're using debhelper in the source
    package
  * [Lintian] Don't ignore errors in swat.postrm
  * [Lintian] Fix "local foo=bar" bashisms in samba-common.dhcp, samba.config
    and samba-common.config
  * smb.conf.5-undefined-configure.patch: fix syntax error in smb.conf(5)
    Closes: #512843

  [ Debconf translations ]
  * Asturian added. Closes: #511730

 -- Christian Perrier <bubulle@debian.org>  Sat, 24 Jan 2009 16:04:57 +0100

samba (2:3.3.0~rc2-3) experimental; urgency=low

  * Fix around the libsmbclient/libsmbclient-dev descriptions, which got
    swapped in the last upload.
  * Drop a boilerplate sentence from the samba-common, smbclient, swat, 
    samba-doc, samba-doc-pdf, samba-dbg, and libwbclient0 descriptions
    that's not relevant for these packages.
  * Hyphenate "command-line" in the smbclient short description.
  * Fix up the smbclient description, which got crossed with the smbfs one.
  * Fix the smbfs description, which was not actually fixed in the previous
    upload.  Really closes: #496206.
  * Further minor adjustments to the description of the swat package.