@@ -13,8 +13,8 @@ usr/share/man/man5/smbpasswd.5
 usr/share/man/man7/samba.7
 usr/share/man/man8/net.8
 usr/share/man/man8/smbpasswd.8
-usr/share/samba/lowcase.dat
-usr/share/samba/panic-action
+usr/share/samba/lowcase.dat.samba3
+usr/share/samba/panic-action.samba3
 usr/share/samba/smb.conf*
-usr/share/samba/upcase.dat
-usr/share/samba/valid.dat
+usr/share/samba/upcase.dat.samba3
+usr/share/samba/valid.dat.samba3
