@@ -6,6 +6,11 @@ if [ "$1" = "configure" ]
 then
 	update-alternatives --remove nmblookup /usr/bin/nmblookup.samba3
 	update-alternatives --remove net /usr/bin/net.samba3
+	for N in valid.dat upcase.dat lowcase.dat
+	do
+		update-alternatives --remove $N /usr/share/samba/$N.samba3
+	done
+	update-alternatives --remove samba-panic-action /usr/share/samba/panic-action.samba3
 fi
 
 #DEBHELPER#
